Update and rename record.html to personal_record.html

--- a/personal_record.html
+++ b/personal_record.html
@@ -74,7 +74,7 @@
 </head>
 <body>
   <div class="container">
-    <div class="title">📚 Literature Review Manager <span class="muted">— Single File (Local & Private)</span></div>
+    <div class="title">📚 Literature Review Manager <span class="muted">(Local & Private)</span></div>
 
     <div class="stack" role="group" aria-label="Main panels">
       <!-- Top: Form -->
